--- a/01_Importance_of_LLM_and_CNN/main.html
+++ b/01_Importance_of_LLM_and_CNN/main.html
@@ -6,13 +6,74 @@
   </head>
   <body>
     <section class="level1" aria-labelledby="1章-文章解析と画像解析の重要性">
-      <div class="coverpage"><h1 id="h1_0">1章<br>文章解析と画像解析の重要性</h1></div>
+      <div class="coverpage"><h1 id="h1_0">1章 文章解析と画像解析の重要性</h1></div>
       <section class="level2" aria-labelledby="生成aiなのになぜ文章解析と画像解析なのか">
-        <div class="secheader"><h2 id="h2_0">生成AIなのに、なぜ文章解析と画像解析なのか？</h2><p><span class="hashtag">#チャットボット／#言語モデル</span><br>人間が入力した自然文のリクエストに対して自然文で回答したり、対応する画像や動画、あるいは音声を生成する「生成AI」が数多く登場しています。文章や画像であれ、生成AIの中身はTransformer<span class="footnote">AIモデルの一種で、本書の5章で紹介します。</span>の登場以来、飛躍的な進歩を遂げており、昨今の研究では時空間を理解<span class="footnote">2023年10月にMIT（マサチューセッツ工科大学）が公開した論文によれば、大量のデータを学習したことによって我々が生活する空間や時間といった概念を構造的な知識（"world model"）として有しているとのこと。（<a href="https://doi.org/10.48550/arXiv.2310.02207%EF%BC%89">https://doi.org/10.48550/arXiv.2310.02207）</a></span>しているとの研究報告もあります。他人の頭を覗くことが出来ないように、生成AIの中身を理解する事は非常に困難ですが、どのように学習しているのかについて理解を深めることで<br></p></div>
+        <div class="secheader"><h2 id="h2_0">生成AIなのに、<br>なぜ文章解析と画像解析なのか？</h2><p>
+          <span class="hashtag">#チャットボット</span>
+          <span class="hashtag">#言語モデル</span><br>
+        </p></div>
         
-        <section class="level3" aria-labelledby="言語モデルを呼び出すとは">
-          <h3 id="h3_0">言語モデルを呼び出すとは</h3>
-          <p>改めて「言語モデル<span class="footnote">プログラミング言語によっては変数の内容を変えられないルールもありますが、CSS Variable はユーザーが定義できる全ての変数が可変です。</span>。を呼び出す」とはどういうことでしょうか？</p>
+        <p>
+          人間が入力した自然文のリクエストに対して自然文で回答したり、対応する画像を生成する生成AIが数多く登場しています。
+          2022年に公開されたChatGPTは、分野によっては人間の作文と遜色ない文章を生成することができ、2021年にはハリウッドスターのディープフェイク（deepfake）
+          <span class="footnote">ある人物の顔や音声などを、著名人等の別人のものに置き換えたコンテンツの事で、既に聞き馴染みがある読者も多いかもしれません。2017年にインターネット上の掲示板に"deepfakes"というユーザが機械学習アルゴリズムで作成したポルノを投稿し、以降広く使用されるようになりました。"Oxford English Dictionary"という著名な英語辞書がありますが、deepfakeが単語として掲載されたのは2023年3月でした。生成AIの進化によって創出された言葉が</span>
+          を用いて作成されたCM動画が公開され話題になりました
+          <span class="footnote">映画"Die Hard"（1988年）、"The Fifth Element"（1997年）、等に出演したBruce Willis氏のdeepfakeが、ロシアの通信企業であるMegafon社のCMに使用されました。同氏は失語症を患い2022年に俳優業を引退していますが、一時、同氏が自身のdeepfakeを作成する権利を売却したとのニュースが流れ、「本人が引退しても新作映画や広告などに出演し続けられるじゃないか！」と話題になりましたが、売却の事実はないと同氏の代理人により後日否定されています。前述したCMのように、単発契約でdeepfakeを作成する可能性あるとのことです。</span>
+          。また、数秒の音声データから人の声を忠実に再現するAIが開発されるなど、生成AIの種類は多岐に渡ります。
+        </p>
+        <p>
+          生成される情報が文章や画像であれ、AIは何かしらの方法で文章や画像といったデータを解析し、学習しています。昨今の生成AIは言語モデルを基本とし、言語と画像を組み合わせることで、文章から画像を生成したり、文章と音声データを組み合わせることで音声を生成したりします。このように、別々の性質の情報を同時に扱うAIをマルチモーダルAIと表現しますが、本書では昨今の生成AIの基本となる言語モデル、そして画像などの別のモーダルをどのように組み合わせているのかという事に注目します。
+          生成AIモデルがどのようにデータを処理し、生成を行うのかを理解することで、より効果的な活用が可能となるでしょう。仕組みを理解することで、生成AIを利用する際に生じる課題や制約を正確に把握することができ、人間と生成AIとの「最適な付き合い方」を知るヒントを得ていきましょう。
+        </p><!-- 因みに虚偽情報を指す"fake news"という単語はTrump元大統領がメディアに対して発言したことを端に、2016年以降に広く使用されるようになったようです。 --><!-- このように高品質の文章や画像や動画が生成できてしまうが故に、悪意を持って使えば偽りの情報（いわゆるfake news）を生成して流布する事が出来てしまいます。 --><!-- "Armageddon"（1998年）、 --><!-- fake newsが単語として登場したのは2016年 --><!--
+        これらのモデルは表面的な形式（例えば言語モデルであれば単語の出現頻度やパターン）を学習しているだけで、真に物事を理解している訳ではないという説が古くからある一方で、時空間を理解している可能性があるとの研究結果
+        <span class="footnote">2023年10月にMIT（マサチューセッツ工科大学）が公開した論文*"Language Models Represent Space and Time"*によれば、大量のデータを学習したことによって我々が生活する空間や時間といった概念を構造的な知識（"world model"）として有している可能性が述べられています。<br>（https://doi.org/10.48550/arXiv.2310.02207）</span>
+        や、言語モデルと人間の脳の活動パターンが類似するという研究結果
+        <span class="footnote">2023年10月にコペンハーゲン大学らの研究チームが公開した論文*"Structural Similarities Between Language Models and Neural Response Measurements"*によれば、特定の単語やフレーズに応答する際の、AIモデルの活性化状態の可視化イメージと、人間の脳の活性化状態のfMRI（機能的磁気共鳴画像法：脳の血流から活動状況を調べる手法）イメージを比較したところ、モデルの規模が大きくなるに連れて類似するという結果が得られたそうです。著者らは、言語モデルは飽くまでも表面的な形式に基づいており、本質的な意味理解が不足しているという論説（いわゆる"Newman's objection"）を否定しています。
+        <br>（https://doi.org/10.48550/arXiv.2306.01930）</span>
+        が公開されています。
+        他人の頭を覗くことが出来ないように、生成AIの中身（思考過程）を理解する事は非常に困難です。一方で、中身を十分に理解していないと使えないか、というとそうではないのです。実際にビジネス運用にも耐え得るサービスが登場していることからも分かる通り、これらの生成AIの得手を上手く活用する事で、従来の作業を効率化したり、新たな価値を生むことも可能なのです。
+        -->
+        <section class="level3" aria-labelledby="生成aiの種類と文章生成aiと画像生成aiの関係">
+          <h3 id="h3_0">生成AIの種類と、文章生成AIと画像生成AIの関係</h3>
+          <p>生成AIと言っても、質問文に対して自然文を生成する文章生成AIや、画像を生成する画像生成AI、動画や音声を自動で生成するAIも登場しています。</p>
+          <ul>
+            <li>文章生成AIの例
+              <ul>
+                <li>GPT（OpenAI社）
+                  <ul>
+                    <li>主なサービス：ChatGPT</li>
+                  </ul>
+                </li>
+                <li>PaLM2（Google社）
+                  <ul>
+                    <li>主なサービス：Bard</li>
+                  </ul>
+                </li>
+                <li>Llama（Meta社）
+                  <ul>
+                    <li>無償で商用利用も可能</li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>画像生成AIの例
+              <ul>
+                <li>DALL-E（OpenAI社）</li>
+                <li>Stable Diffusion（オープンソース）</li>
+                <li>Midjourney（Midjourney, Inc.）</li>
+              </ul>
+            </li>
+            <li>動画生成AIの例
+              <ul>
+                <li>AnimateDiff（オープンソース）</li>
+              </ul>
+            </li>
+            <li>音声生成AIの例<span class="footnote">例示したVALL-Eは、</span>
+              <ul>
+                <li>VALL-E（Microsoft社）</li>
+              </ul>
+            </li>
+          </ul>
           <p>ChatGPTなどWebサービスでは、テキストボックスにメッセージを入力し、送信ボタンをクリックすることで結果が出力されます。</p>
           <div class="figure">
             
