--- a/01_Importance_of_LLM_and_CNN/main.html
+++ b/01_Importance_of_LLM_and_CNN/main.html
@@ -165,24 +165,15 @@
           <section class="level4" aria-labelledby="-古いデータで学習されており最新情報にはついていけない">
             <h4 id="h4_3">② 古いデータで学習されており、最新情報にはついていけない</h4>
             <p>
-              <span class="hashtag">#API</span>
-              <span class="hashtag">#Function call</span>
-              大量の学習が必要になるため、リアルタイムでモデルを更新していくことは困難です。例えば、ChatGPTでは2021年9月までのデータが学習されています<span class="notetext">無償版ChatGPTには"gpt-3.5"系の言語モデルが使用されており、2021年09時点のデータで学習されています。2023年11月に発表された"gpt-4-turbo"系の言語モデルは2023年4月までのデータで学習されています。（<a href="https://platform.openai.com/docs/models/%EF%BC%89">https://platform.openai.com/docs/models/）</a>
-</span>。一方で、有償版のChatGPT、MicrosoftのBeing、GoogleのBardでは、インターネット検索も可能なため、学習時には知りえなかった知識についても、言語モデルを更新することなく回答する事が可能になっています。例えると、全く土地勘がない地方新聞を読むイメージです。日本語自体は読解できるので理解はできますが、このように、別のアプリケーションと連携する事で解決可能になります。
-            </p>
-          </section>
-          <section class="level4" aria-labelledby="-社内データを分析したいけど一度に読み込ませることができず使えない">
-            <h4 id="h4_4">③ 社内データを分析したいけど、一度に読み込ませることができず使えない</h4>
-            <p>
               <span class="hashtag">#RAG（Retrieval Augmented Generation）</span>
               <span class="hashtag">#Embedding</span>
               <span class="hashtag">#ベクトルDB</span>
-              モデルに拡張知識を授ける方法（RAG）がある
-              著者について聞いてみる。Google Search APIと連携したChatGPTと著者の情報をEmbeddしたChatGPTに著者を紹介させる。
             </p>
+            <p>モデルの作成には大量の学習が必要になるため、リアルタイムでモデルを更新していくことは困難です。例えば、ChatGPTでは2021年9月までのデータが学習されています<span class="notetext">無償版ChatGPTには"gpt-3.5"系の言語モデルが使用されており、2021年09時点のデータで学習されています。2023年11月に発表された"gpt-4-turbo"系の言語モデルは2023年4月までのデータで学習されています。（<a href="https://platform.openai.com/docs/models/%EF%BC%89">https://platform.openai.com/docs/models/）</a>
+</span>。一方で、有償版のChatGPT、MicrosoftのBeing、GoogleのBardでは、インターネット検索も可能なため、学習時には知りえなかった知識についても、言語モデルを更新することなく回答する事が可能になっています。モデルの更新をせずに最新情報を扱うという事は、例えると、全く土地勘がない地方新聞を読むイメージに近いかもしれません。その土地固有のお祭り情報や慣習については解像度が下がるかもしれませんが、日本語自体は読解できるので、記事の内容は理解することができます。このように、外部情報を与えてあげる事によって、より。</p>
           </section>
           <section class="level4" aria-labelledby="-生成物にバラつきがあり毎回回答が異なる信用できない">
-            <h4 id="h4_5">④ 生成物にバラつきがあり（毎回、回答が異なる）信用できない</h4>
+            <h4 id="h4_4">③ 生成物にバラつきがあり（毎回、回答が異なる）信用できない</h4>
             <p>
               <span class="hashtag">#ハルシネーション</span>
               <span class="hashtag">#プロンプトエンジニアリング</span>
