chap02.sec03まで描いた

--- a/01_Importance_of_LLM_and_CNN/main.html
+++ b/01_Importance_of_LLM_and_CNN/main.html
@@ -216,7 +216,7 @@
 </span>を獲得し、所望のデータを生成するために必要な事前学習を行っています。</p>
           <p>
             文章や画像をどのように数字表現に変換するかについては別章で述べますが、ここでは3つの単語の潜在表現を例示します。各単語を200個の数字（200次元）に変換<span class="notetext">今回は日本語のWikipedia全文をword2vec（CBOW）モデルで学習し、各単語の潜在表現を計算しました。
-</span>し、縦10個、横20個に並べて、数字の大小で色付けを行ったものです。この例では、（a）コーヒーと（b）お茶は色合いが近しい一方で、（c）哲学という単語は傾向が異なっています。前者2単語は共に飲料を表し、後者は学問を表しますから、両者の傾向が違うというのは我々の感覚とも一致しているかと思います。
+</span>し、縦10個、横20個に並べて、数字の大小で色付けを行ったものです。この例では、（a）コーヒーと（b）お茶は色合いが近しい一方で、（c）上出来という単語は傾向が異なっています。前者2単語は共に飲料を表し、後者は形容詞ですから、両者の傾向が違うというのは我々の感覚とも一致しているかと思います。
             文章であっても同様に変換する事が可能であり、文章を数字表現として捉える事で、文章が持つ意味合いを表すことができるのです。
           </p>
           <p>このように、文章や画像などの<em>元データの潜在表現を獲得する機能をEncoder</em>と呼びます。また、この処理を逆方向に実行して<em>潜在表現から文章や画像といったデータを生成する機能をDecoder</em>と呼びます。</p>
@@ -235,7 +235,7 @@
             <img src="img/01_text2image.jpg" width="400">
           
           <p>図X-X 画像生成AIの処理イメージ</p></div>
-          <p>図X-Xに示したText Encoderと、Image Generatorの組み合わせは多く提案されており、役割がオーバーラップする組合わせや、Decoderという表現を使わないモデルも含まれるため、飽くまでもイメージとなります。重要な点は、入力されたデータから潜在表現を経由して目的のモダリティのデータを生成するという点です。例えば、文章から音声を生成する音声生成AIは、図中のImage Generatorを音声データを生成するモデルに変えてやる事で実現できます。画像を入力として潜在表現に変換して、その潜在表現から文章を生成するようにモデルを組み合わせれば、先に紹介した"Google Lookout"のように画像を説明する生成AIを作成できます。</p>
+          <p>図X-Xに示したText Encoderと、Image Generatorの組み合わせは多く提案されており、役割が重複する組合わせや、Decoderという表現を使わないモデルも含まれるため、飽くまでもイメージとなります。重要な点は、入力されたデータから潜在表現を経由して目的のモダリティのデータを生成するという点です。例えば、文章から音声を生成する音声生成AIは、図X-X中のImage Generatorを、音声データを生成するモデルに変えてやる事で実現できます。画像を入力として潜在表現に変換して、その潜在表現から文章を生成するようにモデルを組み合わせれば、先に紹介した"Google Lookout"のように画像を説明する生成AIを作成できます。</p>
           <p>このように、文章や画像といったモダリティから潜在表現を行き来するには、人間の赤子が言語を習得するのと同様、事前に多量の学習を行う必要があります。このように事前に学習を行ったモデルを<em>基盤モデル（Foundation model）</em><span class="notetext">スタンフォード大学に所属する研究者らで構成されるHAI（Stanford Human-Centered AI Institute）が2021年に提唱したコンセプトで、論文中では"...trained on broad data at scale and are adaptable to a wide range of downstream tasks..."と紹介されている。GPT以外の基盤モデルとして、BERT（Googleが発表した言語モデル）、DALL-E（OpenAI社の画像生成モデル）が例示されています。（<a href="https://doi.org/10.48550/arXiv.2108.07258%EF%BC%89">https://doi.org/10.48550/arXiv.2108.07258）</a>
 </span>と呼びます。</p>
           <div class="column">
@@ -250,7 +250,7 @@
             このGPTに対して、人間好みの回答を出力できるようにファインチューニングを行って、人間と会話するタスクに特化したモデルがChatGPTとなります。
             この例では、大規模学習を行ったGPTが基盤モデルとなり、ChatGPTは下流タスクに特化したモデルと説明する事が出来ます。
           </p>
-          <p>画像や音声といった別のモダリティのデータについても同様に学習する事によって、各モダリティに特化した基盤モデルを構築する事ができ、幅広い下流タスクに応用する事が出来るのです。図X-X<span class="notetext">基盤モデルに関する論文"On the Opportunities and Risks of Foundation Models"（<a href="https://doi.org/10.48550/arXiv.2108.07258%EF%BC%89%E4%B8%AD%E3%81%AE%E5%9B%B3%E8%A1%A8%E3%82%92%E7%AD%86%E8%80%85%E3%81%8C%E5%8A%A0%E5%B7%A5%E3%81%97%E3%81%9F%E3%82%82%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82">https://doi.org/10.48550/arXiv.2108.07258）中の図表を筆者が加工したものです。</a></span>では、基盤モデルが様々なモダリティのデータを共通の潜在表現空間に埋め込んでいる様を表しています。この共通の潜在表現空間内では、モダリティの垣根を越えて概念を関連付けることができます。例えば、「２」や「４」が描かれた画像を対比したり類比させることによって、違う概念なのか同じ概念なのかを識別するタスクを実行できます。また、画像と言語は別のモダリティですが、「４」と「Four」は同じもの、「９」と「Nine<span class="notetext">スワヒリ語で「８」を意味します。スワヒリ語で「９」は「Tisa」です。</span>」は別のもの、といった具合に識別することができます。</p>
+          <p>画像や音声といった別のモダリティのデータについても同様に学習する事によって、各モダリティに特化した基盤モデルを構築する事ができ、幅広い下流タスクに応用する事が出来るのです。図X-X<span class="notetext">基盤モデルに関する論文"On the Opportunities and Risks of Foundation Models"（<a href="https://doi.org/10.48550/arXiv.2108.07258%EF%BC%89%E4%B8%AD%E3%81%AE%E5%9B%B3%E8%A1%A8%E3%82%92%E7%AD%86%E8%80%85%E3%81%8C%E5%8A%A0%E5%B7%A5%E3%81%97%E3%81%9F%E3%82%82%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82">https://doi.org/10.48550/arXiv.2108.07258）中の図表を筆者が加工したものです。</a></span>では、基盤モデルが様々なモダリティのデータを共通の潜在表現空間に埋め込んでいる様を表しています。この共通の潜在表現空間内では、モダリティの垣根を越えて概念を関連付けることができます。例えば、「２」や「４」が描かれた画像を対比したり類比させることによって、違う概念なのか同じ概念なのかを識別するタスクを実行できます。また、画像と言語は別のモダリティですが、「４」と「Four」は同じもの、「９」と「六」は別のもの、といった具合に識別することができます。</p>
           <div class="figure">
             
             <img src="img/01_foundation_models.jpg" height="200">
