--- a/01_Importance_of_LLM_and_CNN/main.html
+++ b/01_Importance_of_LLM_and_CNN/main.html
@@ -22,6 +22,8 @@
           <img src="img/01_chatgpt_birthday_10.png" height="200">
         <!-- similarweb
         https://www.similarweb.com/blog/insights/ai-news/chatgpt-birthday/
+         --><!-- ChatGPT is fastest app to hit 100m users in history
+        https://businessday.ng/technology/article/chatgpt-is-fastest-app-to-hit-100m-users-in-history/
          -->
         <p>図X-X ChatGPTと類似サイトへのアクセス数推移</p></div>
         <p>サービス公開から順調に利用者を伸ばしたChatGPTですが、2023年6月には月単位利用者数が初めて減少に転じました。公開から数か月間の利用で、生成される文章に誤情報が含まれるといった問題が顕在化した事でChatGPT離れが起きたという主張もありますが、学校の宿題を解くためにChatGPTを利用していた米国の小学生が夏休みに入った事による影響という説が有力とみられています。その後に利用者数は回復し、現在でも世界でも有数のアクセス数<span class="notetext">similarweb社のランキングによれば、2023年11月におけるChatGPTへの月間アクセス数は約17億であり、世界19位との事でした。
